Start building some web structure

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
+    <base href="/" />
     <title>Paper Wars</title>
     <meta charset="utf-8" />
     <script src="./index.js" defer></script>
