--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Paper Wars</title>
     <meta charset="utf-8" />
     <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body></body>
 </html>
